grpc-test (1.5.0) UNRELEASED; urgency=medium

  * deamon mode for client

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 19 Feb 2024 15:14:22 +0100

grpc-test (1.4.0) unstable; urgency=medium

  * support custom echo

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Fri, 15 Dec 2023 16:33:05 +0100

grpc-test (1.3.0) unstable; urgency=medium

  * bookworm
  * gRPC method to EchoService/echo renamed to better describe what it does

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Mon, 11 Dec 2023 18:02:35 +0100

grpc-test (1.2.0) unstable; urgency=medium

  * added environment variable to simulate delay

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Wed, 17 Mar 2021 17:46:35 +0100

grpc-test (1.1.0) unstable; urgency=medium

  * added some server options

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Fri, 24 Jul 2020 09:49:58 +0000

grpc-test (1.0.0) unstable; urgency=medium

  * Initial release

 -- Frantisek Boranek <frantisek.boranek@firma.seznam.cz>  Fri, 24 Jul 2020 10:32:37 +0200